# gtest_github_action_trial

./: .gitignore  Makefile  UnionFind.cpp  UnionFind.h  main.cpp
.github/workflows/: c-cpp.yml
test/: CMakeLists.txt  UnionFind_test.cpp
